   - ofaDossierNewMini: deprecated class (todo #1329).
   - ofaDossierProps: new class.
   - ofa_idbconnect_backup(): renamed to ofa_idbconnect_backup_db().
   - ofa_idbconnect_restore(): renamed to ofa_idbconnect_restore_db().
   - ofaIDBEditor: deprecated interface (todo #1328).
   - ofaIDBSuperuser: new interface.
   - ofaExerciceEditBin: new class.
   - ofaExerciceNew: new class.

   + Add a prequisite on JSON-GLib library.
   + Add a prequisite on libarchive library.

-----------------------------------------------------------------------
 Version 0.64
 ============

 Released on 2017-01-09

 New features and improvements:

   - ofaDossierOpen: exercice is disabled if no dossier is selected (todo #1297).
   - ofaExportAssistant: have a message when output file is not set.

 Bug fixes:

   - myIAssistant: fix quit on escape (fix key propagation).
   - ofaImportAssistant: fix page 4 label position.
   - ofaStreamFormatBin: fix header widgets sensitivity (todo #1298, #1299).

 Other changes:

   - my_idialog_click_to_update_ex(): new method.
   - myIDialog: set OK button insensitive in case of an error.
   - myIWindow: set_settings() is renamed set_geometry_settings() (todo #1282).
   - myIWindow: deprecate my_iwindow_get_keyname() (todo #1283).
   - No more try to read/write user settings from myIWindow geometry settings (todo #1284).
   - ofaAccountBookBin class is renamed to ofaAccountBookArgs.
   - ofaBalanceBin class is renamed to ofaBalanceArgs.
   - ofaDossierActionsBin: new class.
   - ofaDossierEditBin: new class.
   - ofaDossierMetaBin: new class.
   - ofaExerciceMetaBin: new class.
   - ofaIDBConnect::create_dossier() can now output an error message.
   - ofaIDBDossierEditor: new interface.
   - ofa_idbdossier_meta_get_provider() no more returns a new reference (todo #1304).
   - ofa_idbdossier_meta_get_settings_group() no more returns a new string (todo #1305).
   - ofa_idbdossier_meta_get_periods() no more returns a new list.