@@ -193,6 +193,7 @@ libofa_core_la_SOURCES = \
 	ofo-currency.c										\
 	ofo-dossier.c										\
 	ofo-entry.c											\
+	ofo-exemeta.c										\
 	ofo-ledger.c										\
 	ofo-ope-template.c									\
 	ofo-paimean.c										\
